[package]
name = "avalon-tracker"
version = "0.1.0"
authors = ["Tanay Nathan <tanaynathan14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

structopt = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15"
async-std = { version = "1.5", features = ["attributes"] }
sqlx = { version = "0.3.4", default-features = false, features = ["runtime-async-std", "macros", "sqlite", "time"] }
